Version 0.3.1:
	New Features:
		Pie - Now has a "doughnut" option 
		Added a Green-Blue color scale
		Data sets can now have a "default view" which will be automatically set when that dataset is loaded

	Fixes:
		Mosaic - Removed option to turn off exploded mode to make moot display issues in non-exploded mode.
		Contrasting colors actually contrast now, when there are fewer than 7 levels in the color scale.
		Text color is white when displayed on a dark background across all visualizations, not just in Table
		Will now read the state correctly from the URL (e.g. if you refresh, you'll be in the same place you left off)
		Back button now works (known issue: forward button still does not)
		
	Other Changes:
		Speed-up in date parsing - will be most evident in large data sets with lots of repeated dates
		DataInfo - Now shows total number of rows in dataset


Version 0.3.0:
	New Features:
		New visualization: Pie chart
		Added a "Count Unique" Aggregator that counts the number of unique values that an attribute has in a data set

	Other Changes:
		Major rewrite to clean up UI code.  Much easier to maintain and expand now.

Version 0.2.2
	New Features:
		Calendar - Months are labeled
		Calendar - Tooltip showing the aggregated value for a particular date
		
	Fixes:
		Can now filter date attributes (e.g. Date At Least 2014-10-12)


Version 0.2.1
	New Features:
		Data Info visualization which just displays info about all the columns in the data set
		Calendar - Can be saved as an image

	Fixes:
		Fixed errors when loading settings from a URL that's set to correlogram (or other visualizations that don't have a Pivot Panel)
		Back/forward previously functioned only every other button press
		Speed-up due to a removed Redraw that occured when Advanced Options were open (for visualizations that don't need to vertically resize)
		
	Other Changes:
		Correlogram - Color scale now defaults to "None"