@@ -1,7 +1,7 @@
 /* globals ss,SplitPanelInit,AttributePanelInit,AggregatorPanelInit,SelectPanelInit,FilterPanelInit,AdvancedOptionsPanelInit */
 
 var SpadeSettings = {
-	Version: "0.3.0",
+	Version: "0.3.1",
 	MaxFilters: 5,
 	NumberOfShades: 7,
 	HiddenAttributes: {				//Should all be in upper case; will be checked case insensitively
@@ -9,10 +9,32 @@ var SpadeSettings = {
 		DisplayAttribute: []
 	},
 	DataSets: [
-		{name: "DC Crime 2013",path:"../sampledata/",file:"dc_crime_2013"},
-		{name: "DC Building Permits",path:"../sampledata/",file:"dc_building_permits"},	//try plotting correl latitude vs longitude and filter out outliers
-		{name: "Calendar Test",path:"../sampledata/",file:"calendar_test",defaulthash:"0=Calendar Test&1=3&2=0Adj Close,1(any),20&4=1Date&6=Adj Close;0&7=00&8=(no split);(no split)"},
-		{name: "Upload Data Set",file:"(upload)"}
+		{
+			name: "DC Crime 2013",
+			path:"../sampledata/",
+			file:"dc_crime_2013",
+			type:"csv"
+		},
+		{
+			name: "DC Building Permits",
+			path:"../sampledata/",
+			file:"dc_building_permits",
+			type:"csv"
+		},	//try plotting correl latitude vs longitude and filter out outliers
+		{
+			name: "Calendar Test",
+			path:"../sampledata/",
+			file:"calendar_test",
+			type:"csv",
+			defaulthash:"0=Calendar Test&1=3&2=0Adj Close,1(any),20&4=1Date&6=Adj Close;0&7=00&8=(no split);(no split)",
+			title: "Calendar Visualization Example",
+			body: "This is the body text"
+		},
+		{
+			name: "Upload Data Set",
+			type:"sessionstorage",
+			file:"(upload)"
+		}
 	],
 	ColorScales: [ 
 		{name: "Green-Blue", prefix: "YB", js:"YlGnBu"},
