@@ -1,19 +1,24 @@
 Version 0.3.1:
 	New Features:
+		The Options Header can now be "rolled up" so there's more space for the visualization
 		Pie - Now has a "doughnut" option 
 		Added a Green-Blue color scale
 		Data sets can now have a "default view" which will be automatically set when that dataset is loaded
+		All visualizations now have a legend
 
 	Fixes:
 		Mosaic - Removed option to turn off exploded mode to make moot display issues in non-exploded mode.
 		Contrasting colors actually contrast now, when there are fewer than 7 levels in the color scale.
 		Text color is white when displayed on a dark background across all visualizations, not just in Table
 		Will now read the state correctly from the URL (e.g. if you refresh, you'll be in the same place you left off)
-		Back button now works (known issue: forward button still does not)
+		Back/forward now work correctly
+		Header and Visualization now scroll to top when the visualization or dataset changes
 		
 	Other Changes:
 		Speed-up in date parsing - will be most evident in large data sets with lots of repeated dates
 		DataInfo - Now shows total number of rows in dataset
+		Pie - Text labels on pie wedges can be turned off
+		Shows messages (e.g. "Calculating...") during long operations
 
 
 Version 0.3.0:
